<resources>
    <string name="app_name">Aplikacja pogoda</string>
    <string name="weather">Pogoda</string>
    <string name="location">Lokalizacja</string>
    <string name="date">Data (R-M-D)</string>
    <string name="time">Czas (Godzina)</string>
    <string name="temperature">Temperatura</string>
    <string name="pressure">Ciśnienie</string>
    <string name="humidity">Wilgotność</string>
    <string name="precipitation">Opad</string>
    <string name="wind">Wiatr</string>
    <string name="direction">Kierunek</string>
    <string name="index">Indeks</string>
    <string name="cloudy">Zachmurzenie</string>
    <string name="zone">Określ czas i date</string>
    <string name="locationInfo">Wybierz miejscowość</string>
    <string name="gpsInfo">Określ lokalizację za pomocą GPS</string>
    <string name="gps">GPS</string>
    <string name="search">Szukaj</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>