<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clear_day" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="196dp"
        android:layout_height="164dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/typeWeatherTextView"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/weather"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/location"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/date"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/time"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="376dp"
        android:layout_height="292dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/temperature"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/humidity"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/precipitationTextView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/precipitation"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/windSpeedTextView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/wind"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/windDirectionextView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/direction"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/pressure"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/indexUvTextView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/index"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cloudyTextView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/cloudy"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="376dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/zoneTextView"
            android:layout_width="126dp"
            android:layout_height="48dp"
            android:text="@string/zone"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/locTextView"
            app:layout_constraintEnd_toStartOf="@+id/editTextTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="date"
            android:text="@string/date"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/locationEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextTime"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/time"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/locationEditText"
            app:layout_constraintEnd_toStartOf="@+id/editTextDate"
            app:layout_constraintStart_toEndOf="@+id/zoneTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locTextView"
            android:layout_width="172dp"
            android:layout_height="48dp"
            android:text="@string/locationInfo"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/gpsTextView"
            app:layout_constraintEnd_toStartOf="@+id/locationEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zoneTextView" />

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="202dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/location"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/gpsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/locTextView"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <TextView
            android:id="@+id/gpsTextView"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/gpsInfo"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gpsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locTextView" />

        <Button
            android:id="@+id/gpsButton"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:backgroundTint="#331866"
            android:text="@string/gps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gpsTextView"
            app:layout_constraintTop_toBottomOf="@+id/locationEditText"
            app:rippleColor="#331866" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="376dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="#331866"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#331866" />

</androidx.constraintlayout.widget.ConstraintLayout>