<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.AplikacjaPogoda.AppWidget.Container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.AplikacjaPogoda.AppWidgetContainer"
    app:barrierDirection="top">

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="196dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weatherIconWidget"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/clear_day" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weatherIconWidget"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="114dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/temperatureTextViewWidget"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/temperature"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/humidityTextViewWidget"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/humidity"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/precipitationTextViewWidget"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/precipitation"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/pressureTextViewWidget"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/pressure"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/windSpeedTextViewWidget"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/wind"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/windDirectionViewWidget"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/direction"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/indexUvTextViewWidget"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/index"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/cloudyTextViewWidget"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/cloudy"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <TextView
                    android:id="@+id/locationTextViewWidget"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/dateTextViewWidget"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/timeTextViewWidget"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherIconWidget">

                <TextView
                    android:id="@+id/typeWeatherTextViewWidget"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/weather"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>